# dota2_parser

./: .gitignore  CMakeLists.txt
include/: BaseParser.h  Fetcher.h  Image.h  JsonParser.h  Window.h
src/: Fetcher.cpp  Image.cpp  JsonParser.cpp  Window.cpp  main.cpp
